--- a/index.css
+++ b/index.css
@@ -1,7 +1,15 @@
 .index_title{
     font-size: 50px;
 }
+
+.index{
+    margin: 10px;
+}
+
 .index_h1{
+    width: 100%;
     background-color: black;
     color: white;
+    height: 60px;
+    line-height:60px;
 }
