--- a/css/content.css
+++ b/css/content.css
@@ -12,7 +12,7 @@
 
 .content_card{
     width: 43%;
-    margin: 10px 3%;
+    margin: 10px calc(3% - 6px);
     border: 3px solid black;
     text-align: center;
     font-weight: bold;
