--- a/css/bord.css
+++ b/css/bord.css
@@ -1,6 +1,6 @@
 .bord_response{
     background-color: #eeeeee;
-    width: 100%;
+    width: calc(100% - 20px);
     margin-bottom: 10px;
     padding: 8px;
 }
