--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,8 @@
 
 .header_title img{
     position: relative;
-    height: 100px;
+    max-height: 100px;
+    max-width: 100%;
     left: 50%;
     transform: translateX(-50%);
 }
